Ajustes functions.php

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 /*
-Theme Name: Atlantic (personalizado)
-Theme URI: http://www.atlantic.com.br/
-Author: A2 Comunicação
-Author URI: http://www.a2comunicacao.com.br/
-Version: 1.0
-Text Domain: wordpress-boilerplate
+Theme Name: Snack WP
+Description: Tema para auxiliar no pontapé inicial em um projeto web.
+Theme URI: http://snack.github.io/snack-wp/
+Author: Snack
+Author URI: http://snack.github.io/snack-wp/
+Version: 2.0
+Tags: gray, white
+License: GNU General Public License v2 or later
+Text Domain: snack-wp
 */
+
+
