--- a/assets/scss/atoms/lists.scss
+++ b/assets/scss/atoms/lists.scss
@@ -2,6 +2,10 @@
     Lists
     ========================================================================== */
 
+    /*
+     * CSS for all devices
+     */
+
     @media only screen {
         ul,
         dl {
@@ -9,11 +13,20 @@
             font-size: 14px;
         }
     }
-    
+
     /*
-     * CSS for devices with resolution bigger than breakpoint
+     * CSS for devices with resolution up to a maximum of breakpoint
      */
 
-    @media only screen and (min-width: $breakpoint) {
+    @media only screen and (max-width: $breakpoint) {
+
+    }
+
+
+    /*
+     * CSS for devices with resolution up to the minimum breakpoint
+     */
+
+    @media only screen and (min-width: $breakpoint+1) {
 
     }
