--- a/assets/scss/atoms/tables.scss
+++ b/assets/scss/atoms/tables.scss
@@ -1,16 +1,29 @@
 /*  ==========================================================================
     Tables
     ========================================================================== */
-    
+
+    /*
+     * CSS for all devices
+     */
+
     @media only screen {
 
     }
 
 
     /*
-     * CSS for devices with resolution bigger than breakpoint
+     * CSS for devices with resolution up to a maximum of breakpoint
      */
 
-    @media only screen and (min-width: $breakpoint) {
+    @media only screen and (max-width: $breakpoint) {
+
+    }
+
+
+    /*
+     * CSS for devices with resolution up to the minimum breakpoint
+     */
+
+    @media only screen and (min-width: $breakpoint+1) {
 
     }
