--- a/assets/scss/atoms/typography.scss
+++ b/assets/scss/atoms/typography.scss
@@ -2,12 +2,15 @@
     Typography
     ========================================================================== */
 
+    /*
+     * CSS for all devices
+     */
+
     @media only screen {
 
         body {
             -webkit-text-size-adjust: none;
             -ms-text-size-adjust:none;
-            font-family: Merriweather, serif;
         }
 
         /*  Titles
@@ -18,51 +21,81 @@
             h4,
             h5,
             h6 {
-                font-family: Lato, sans-serif;
-                font-weight: 700;
+                font-family: inherit;
+                margin: 0 0 20px 0;
+                font-weight: 400;
+                color: inherit;
             }
 
-            .article-header {
-                .article-date {
-                    color: $color-primary-lighten;
-                }
+            h1{
+                font-size: 36px;
+                line-height: 40px;
+            }
+
+            h2{
+                font-size: 30px;
+                line-height: 34px;
+            }
+
+            h3{
+                font-size: 24px;
+                line-height: 28px;
+            }
+
+            h4{
+                font-size: 18px;
+                line-height: 22px;
+            }
+
+            h5{
+                font-size: 14px;
+                line-height: 18px;
+            }
+
+            h6{
+                font-size: 12px;
+                line-height: 16px;
             }
 
         /*  Texts
             ========================================================================== */
             p {
-                color: #666;
+                color: #000000;
                 font-size: 16px;
-                line-height: 20px;
-                margin: 0 0 15px;
+                line-height: 26px;
+                margin: 0 0 30px;
                 text-align: left;
-            }
-
-            article p {
-                color: #333;
-                line-height: 32px;
-                text-align: left;
-                + p {
-                    margin: 34px 0 0;
-                }
             }
 
         /*  Links
             ========================================================================== */
             a {
-             color: blue;
-             text-decoration: none;
-           }
+                color: blue;
+                text-decoration: none;
+            }
 
-           a:hover { text-decoration: underline; }
+            a:hover { text-decoration: underline; }
+
+        /*  Figure
+            ========================================================================== */
+            figure{
+                margin: 0;
+            }
+    }
+
+    /*
+     * CSS for devices with resolution up to a maximum of breakpoint
+     */
+
+    @media only screen and (max-width: $breakpoint) {
 
     }
 
 
     /*
-     * CSS for devices with resolution bigger than breakpoint
+     * CSS for devices with resolution up to the minimum breakpoint
      */
 
-    @media only screen and (min-width: $breakpoint) {
+    @media only screen and (min-width: $breakpoint+1) {
 
     }
