--- a/assets/scss/molecules/forms.scss
+++ b/assets/scss/molecules/forms.scss
@@ -2,6 +2,10 @@
     Forms
     ========================================================================== */
 
+    /*
+     * CSS for all devices
+     */
+
     @media only screen {
 
         /*  Default
@@ -35,14 +39,23 @@
                 color: $color-required;
                 font-size: $required-font-size;
             }
-            
+
     }
 
 
     /*
-     * CSS for devices with resolution bigger than breakpoint
+     * CSS for devices with resolution up to a maximum of breakpoint
      */
 
-    @media only screen and (min-width: $breakpoint) {
+    @media only screen and (max-width: $breakpoint) {
+
+    }
+
+
+    /*
+     * CSS for devices with resolution up to the minimum breakpoint
+     */
+
+    @media only screen and (min-width: $breakpoint+1) {
 
     }
