--- a/assets/scss/organisms/layout.scss
+++ b/assets/scss/organisms/layout.scss
@@ -2,135 +2,27 @@
     Layout
     ========================================================================== */
 
+    /*
+     * CSS for all devices
+     */
+
     @media only screen {
 
-        /*  Main
-            ========================================================================== */
-            /*Linha do Tempo*/
-            .timeline {
-                padding: 0;
-                position: relative;
-                overflow: hidden;
-                padding: 0 2px 2px;
-            }
-            .timeline-item {
-                display: block;
-                width: 100%;
-                background-color: lighten($color-basic, 17%);
-                padding: 20px 30px;
-                + .timeline-item {
-                    margin-top: 20px;
-                }
-            }
-            .timeline-year {
-                font-family: Merriweather, serif;
-                color: $color-primary-lighten;
-                font-size: 24px;
-                margin-bottom: 6px;
-                margin-top: 0;
-                text-align: inherit;
-            }
-            .timeline-text {
-                margin-bottom: -1px;
-                line-height: 1.8;
-                font-family: Lato, sans-serif;
-                color: $color-secondary-darken;
-                text-align: inherit;
-            }
-
-            /*Equipe*/
-            .list-team {
-                padding: 0;
-                font-size: 0;
-                li {
-                    display: inline-block;
-                    vertical-align: top;
-                    list-style: none;
-                    width: 100%;
-                    font-size: 12px;
-                    text-align: center;
-                    color: #333;
-                    + li + li + li {
-                        margin-top: 20px;
-                    }
-                }
-            }
-
-            .avatar {
-                @include border-radius(50%);
-                + h3 {
-                    color: $color-primary;
-                    text-transform: uppercase;
-                    font-size: 17px;
-                    margin: 8px auto 6px;
-                }
-            }
     }
 
 
     /*
-     * CSS for devices with resolution bigger than breakpoint
+     * CSS for devices with resolution up to a maximum of breakpoint
      */
 
-    @media only screen and (min-width: $breakpoint) {
-        /*  Main
-            ========================================================================== */
-            /*Linha do Tempo*/
-            .timeline {
-                &:before {
-                    content:'';
-                    background-color: lighten($color-basic, 8%);
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    width: 4.8px;
-                    height: 90%;
-                    margin: 9px auto 0;
-                }
-            }
-            .timeline-item {
-                width: 45%;
-                &,
-                + .timeline-item + .timeline-item,
-                + .timeline-item + .timeline-item + .timeline-item + .timeline-item,
-                + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item,
-                + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item {
-                    float: left;
-                    @include box-shadow(-2px 2px 0px lighten(desaturate($color-secondary, 55%), 55%));
-                    text-align: right;
-                }
-                + .timeline-item,
-                + .timeline-item + .timeline-item + .timeline-item,
-                + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item,
-                + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item + .timeline-item {
-                    float: right;
-                    @include box-shadow(2px 2px 0px lighten(desaturate($color-secondary, 55%), 55%));
-                    text-align: left;
-                    margin-top: 45px;
-                }
-            }
-            /*Equipe*/
-            .list-team li {
-                width: 32.33%;
-                &,
-                + li + li + li,
-                + li + li + li + li + li,
-                + li + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li + li + li + li + li + li {
-                    margin-right: 1.5%;
-                }
-                + li + li,
-                + li + li + li + li,
-                + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li + li + li + li + li,
-                + li + li + li + li + li + li + li + li + li + li + li + li + li + li {
-                    margin-right: 0;
-                }
-            }
+    @media only screen and (max-width: $breakpoint) {
+
+    }
+
+    /*
+     * CSS for devices with resolution up to the minimum breakpoint
+     */
+
+    @media only screen and (min-width: $breakpoint+1) {
 
     }
