--- a/assets/scss/base/variables.scss
+++ b/assets/scss/base/variables.scss
@@ -28,22 +28,22 @@
 
         /*  Inputs
             ========================================================================== */
-            $color-border-input: #ccc;
-            $color-input: #aaa;
+            $color-border-input: #DADFE1;
+            $color-input: #6C7A89;
 
             /*  Placeholder
                 ========================================================================== */
                 $placeholder-font-size: 14px;
-                $color-placeholder: #ccc;
+                $color-placeholder: #BFBFBF;
 
             /*  Required tip
                 ========================================================================== */
-                $color-required-tip: #999;
+                $color-required-tip: #6C7A89;
                 $required-tip-font-size: 12px;
 
             /*  Required field
                 ========================================================================== */
-                $color-required: #666;
+                $color-required: #6C7A89;
                 $required-font-size: 12px;
 
     /*  ==========================================================================
