--- a/assets/scss/molecules/forms.scss
+++ b/assets/scss/molecules/forms.scss
@@ -10,15 +10,21 @@
 
         /*  Default
             ========================================================================== */
-            .form fieldset {
-                border: none;
-                padding: 15px;
-                background-color: $color-bg-form;
-                border: solid 1px $color-border-form;
+            .form{
+                margin-bottom: 20px;
+                fieldset {
+                    border: none;
+                    padding: 0;
+                    margin: 0;
+                }
             }
 
             .form-label {
-                display: block;
+                display: inline-block;
+                color: $color-required;
+                font-size: $required-font-size;
+                line-height: 14px;
+                margin-bottom: 4px;
             }
 
         /*  Required tip
@@ -27,7 +33,7 @@
                 color: $color-required-tip;
                 display: block;
                 font-size: $required-tip-font-size;
-                text-align: right;
+                margin-bottom: 20px;
             }
 
             .required {
@@ -58,4 +64,26 @@
 
     @media only screen and (min-width: $breakpoint+1) {
 
+        /*  Form Search
+            ========================================================================== */
+            .form-search{
+                font-size: 0;
+
+                input{
+                    width: 75%;
+                    vertical-align: middle;
+                    margin: 0;
+                }
+
+                input + input{
+                    width: 24%;
+                    margin-left: 1%;
+                }
+
+                .form-label{display: block;}
+
+                .btn{
+                    padding: 12px 4px;
+                }
+            }
     }
