--- a/assets/scss/molecules/icons.scss
+++ b/assets/scss/molecules/icons.scss
@@ -9,6 +9,27 @@
 
 
 
+    .ico-accept {
+        width: 16px;
+        height: 16px;
+        background-position: 0px 0px;
+    }
+
+
+    .ico-cancel {
+        width: 16px;
+        height: 16px;
+        background-position: -16px 0px;
+    }
+
+
+    .ico-error {
+        width: 16px;
+        height: 16px;
+        background-position: 0px -16px;
+    }
+
+
     /*  HD devices
         ========================================================================== */
 
