Add bootstrap v4 grid files and integrate to snack-wp scss

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,7 @@
 
 /* Atoms
     ========================================================================== */
-    @import "atoms/grid";
+    @import "bootstrap-grid/bootstrap-grid";
     @import "atoms/font-awesome";
     @import "atoms/typography";
     @import "atoms/buttons";
